Added CSRF protection to the logout form (closes #14)

--- a/src/Hvz/GameBundle/Resources/views/page.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/page.html.twig
@@ -91,7 +91,7 @@
 				});
 
 				$("#menu-logout").click(function() {
-					window.location = "{{ path('hvz_auth_logout') }}";
+					window.location = "{{ path('hvz_auth_logout', {'token': csrf_token('hvz_auth_logout')}) }}";
 				});
 			{% else %}
 				$("#menu-login").click(function() {
