--- a/src/Hvz/GameBundle/Resources/views/Admin/users.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/users.html.twig
@@ -28,7 +28,7 @@
 			</div>
 			<div class="card-section" vertical layout flex>
 				<a href="{{ path('hvz_admin_profiles_by_user', {'user': user.id}) }}"><paper-button label="{{ user.profiles }} Profiles"></paper-button></a>
-				<a href="{{ path('hvz_admin_profile_generate', {'id': user.id}) }}"><paper-button label="Generate Profile"></a>
+				<a href="{{ path('hvz_admin_profile_generate', {'id': user.id, 'token': csrf_token('hvz_profile_generate')}) }}"><paper-button label="Generate Profile"></a>
 			</div>
 			<div class="card-section" vertical layout flex>
 				<a href="{{ path('hvz_admin_user_edit', {'id': user.id}) }}"><paper-button label="Edit" raisedButton></paper-button></a>
